tests/NormalTests/paczka1/small_fuzzy/25121823.err
Error in line 1: ybUSHHHC S670 68,9
Error in line 6: NGleESg S670 99,3
Error in line 3: ybUSHHHC S395 57,4
Error in line 14: ybUSHHHC A343 8,8
